[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenturn"
version = "0.1.0"
description = "Tokenturn Python SDK - count every OpenAI/Anthropic call and track outcomes with real value."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
]

[tool.setuptools.packages.find]
where = ["src"]
